[package]
name = "background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = "0.17.0"
geng-utils = "0.3.0"
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" }

# Binary size optimizations
[profile.release]
lto = true
# opt-level = 's'
